feat: implement TextEncoder and TextDecoder for React Native

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ node_modules/
 # Production
 dist/
 
-# Testing
-coverage/
+# TypeScript
+*.tsbuildinfo
 
 # IDE
 .idea/
@@ -18,7 +18,9 @@ coverage/
 Thumbs.db
 
 # Logs
-*.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log* 
+yarn-error.log*
+
+# Testing
+coverage/ 
